RegressionTests/TestSuiteExport/reject/inline_asm_invalid_signed_operand.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmInvalidSignedOperand

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x}, -label
    };
}
